clouds z-index fixed plus pointer-events: none added

--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,8 @@
 }
 .clouds {
     background: transparent url(/public/clouds.png) repeat top center;
-    z-index: 3;
+    z-index: 5;
+    pointer-events: none;
     -moz-animation: move-clouds-back 200s linear infinite;
     -ms-animation: move-clouds-back 200s linear infinite;
     -o-animation: move-clouds-back 200s linear infinite;
